framec/tests/snapshots/rust_snapshots__selfcall.snap
---
source: framec/tests/rust_snapshots.rs
expression: "compile_fixture(\"06_selfcall\", \"rust\")"
---
#[allow(dead_code)]
#[allow(non_camel_case_types)]
#[allow(non_snake_case)]
#[allow(unused_variables)]
#[allow(unused_mut)]
#[allow(unused_imports)]
#[allow(clippy::assign_op_pattern)]
#[allow(clippy::clone_on_copy)]
#[allow(clippy::derivable_impls)]
#[allow(clippy::match_single_binding)]
#[allow(clippy::needless_return)]
#[allow(clippy::new_without_default)]
#[allow(clippy::single_match)]
mod _self_call_framec {
    use super::*;
    #[derive(Clone, Debug)]
    #[allow(dead_code, non_camel_case_types)]
    enum SelfCallFrameEvent {
        Kick {  },
        Report {  },
        FrameEnter { args: Vec<String> },
        FrameExit { args: Vec<String> },
    }

    #[derive(Clone)]
    #[allow(dead_code, non_camel_case_types)]
    enum SelfCallFrameReturn {
        Report(i32),
        _Lifecycle(std::rc::Rc<dyn std::any::Any>),
    }

    #[allow(dead_code)]
    impl SelfCallFrameEvent {
        fn name(&self) -> &'static str {
            match self {
                SelfCallFrameEvent::Kick { .. } => "kick",
                SelfCallFrameEvent::Report { .. } => "report",
                SelfCallFrameEvent::FrameEnter { .. } => "$>",
                SelfCallFrameEvent::FrameExit { .. } => "<$",
            }
        }
    }

    #[derive(Clone, Debug)]
    #[allow(dead_code, non_camel_case_types)]
    enum SelfCallFrameValue {
        Int(i64),
        Float(f64),
        Bool(bool),
        Str(String),
        List(Vec<Self>),
        Dict(std::collections::HashMap<String, Self>),
    }

    #[allow(dead_code, non_camel_case_types)]
    struct SelfCallFrameContext {
        event: std::rc::Rc<SelfCallFrameEvent>,
        _return: Option<SelfCallFrameReturn>,
        _data: std::collections::HashMap<String, SelfCallFrameValue>,
        _transitioned: bool,
    }

    impl SelfCallFrameContext {
        fn new(event: std::rc::Rc<SelfCallFrameEvent>, default_return: Option<SelfCallFrameReturn>) -> Self {
            Self {
                event,
                _return: default_return,
                _data: std::collections::HashMap::new(),
                _transitioned: false,
            }
        }
    }

    #[allow(dead_code, non_camel_case_types)]
    #[derive(Clone)]
    enum SelfCallStateContext {
        Active,
        Empty,
    }

    impl Default for SelfCallStateContext {
        fn default() -> Self {
            SelfCallStateContext::Active
        }
    }

    #[allow(dead_code, non_camel_case_types)]
    #[derive(Clone)]
    struct SelfCallCompartment {
        state: String,
        state_context: SelfCallStateContext,
        enter_args: Vec<String>,
        exit_args: Vec<String>,
        forward_event: Option<SelfCallFrameEvent>,
        parent_compartment: Option<Box<SelfCallCompartment>>,
    }

    impl SelfCallCompartment {
        fn new(state: &str) -> Self {
            let state_context = match state {
                "Active" => SelfCallStateContext::Active,
                _ => SelfCallStateContext::Empty,
            };
            Self {
                state: state.to_string(),
                state_context,
                enter_args: Vec::new(),
                exit_args: Vec::new(),
                forward_event: None,
                parent_compartment: None,
            }
        }
    }

    #[allow(dead_code)]
    pub struct SelfCall {
        _state_stack: Vec<SelfCallCompartment>,
        __compartment: SelfCallCompartment,
        __next_compartment: Option<SelfCallCompartment>,
        _context_stack: Vec<SelfCallFrameContext>,
        pub count: i32,
    }

    #[allow(non_snake_case)]
    impl SelfCall {
        pub fn new() -> Self {
            Self {
                _state_stack: Vec::new(),
                _context_stack: Vec::new(),
                count: 0,
                __compartment: SelfCallCompartment::new("Active"),
                __next_compartment: None,
            }
        }

        pub fn __create() -> Self {
            let mut c = Self::new();
            c.__compartment = c.__prepareEnter("Active", vec![]);
            let __e = std::rc::Rc::new(SelfCallFrameEvent::FrameEnter { args: c.__compartment.enter_args.clone() });
            let __ctx = SelfCallFrameContext::new(std::rc::Rc::clone(&__e), None);
            c._context_stack.push(__ctx);
            c.__kernel(&__e);
            c._context_stack.pop();
            c
        }

        fn __hsm_chain(&mut self, leaf: &str) -> &'static [&'static str] {
            match leaf {
                "Active" => &["Active"],
                _ => &[],
            }
        }

        fn __prepareEnter(&mut self, leaf: &str, enter_args: Vec<String>) -> SelfCallCompartment {
            let chain = self.__hsm_chain(leaf);
            let mut comp: Option<SelfCallCompartment> = None;
            for name in chain.iter() {
                let mut new_comp = SelfCallCompartment::new(name);
                new_comp.enter_args = enter_args.clone();
                if let Some(parent) = comp.take() {
                    new_comp.parent_compartment = Some(Box::new(parent));
                }
                comp = Some(new_comp);
            }
            comp.expect("chain must contain at least the leaf state")
        }

        fn __prepareExit(&mut self, exit_args: Vec<String>) {
            self.__compartment.exit_args = exit_args.clone();
            let mut cursor = self.__compartment.parent_compartment.as_deref_mut();
            while let Some(c) = cursor {
                c.exit_args = exit_args.clone();
                cursor = c.parent_compartment.as_deref_mut();
            }
        }

        fn __kernel(&mut self, __e: &std::rc::Rc<SelfCallFrameEvent>) {
            // Route event to current state.
            self.__router(__e);
            // Drain any transitions queued by the handler.
            while self.__next_compartment.is_some() {
                let next_compartment = self.__next_compartment.take().expect("invariant: while-loop guard checked is_some()");
                // Exit the current (leaf) state.
                let exit_args = self.__compartment.exit_args.clone();
                let exit_event = std::rc::Rc::new(SelfCallFrameEvent::FrameExit { args: exit_args });
                self.__router(&exit_event);
                // Switch to the new compartment.
                self.__compartment = next_compartment;
                // Three-branch forward-event handling (RFC-0025 Track B.1: forward
                // event is matched on enum variant; $> recognition is now a
                // structural match, not a string compare).
                match self.__compartment.forward_event.take() {
                    None => {
                        // No forwarded event — synthesize a fresh $>.
                        let enter_args = self.__compartment.enter_args.clone();
                        let enter_event = std::rc::Rc::new(SelfCallFrameEvent::FrameEnter { args: enter_args });
                        self.__router(&enter_event);
                    }
                    Some(fwd) if matches!(fwd, SelfCallFrameEvent::FrameEnter { .. }) => {
                        // Forwarded event IS $> — dispatch directly so the
                        // destination's $> handler receives the caller's payload.
                        let fwd_rc = std::rc::Rc::new(fwd);
                        self.__router(&fwd_rc);
                    }
                    Some(fwd) => {
                        // Forwarded event is not $> — initialize the destination
                        // with a fresh $>, then dispatch the forward.
                        let enter_args = self.__compartment.enter_args.clone();
                        let enter_event = std::rc::Rc::new(SelfCallFrameEvent::FrameEnter { args: enter_args });
                        self.__router(&enter_event);
                        let fwd_rc = std::rc::Rc::new(fwd);
                        self.__router(&fwd_rc);
                    }
                }
                for ctx in self._context_stack.iter_mut() {
                    ctx._transitioned = true;
                }
            }
        }

        fn __router(&mut self, __e: &std::rc::Rc<SelfCallFrameEvent>) {
            let __ev: &SelfCallFrameEvent = __e;
            match self.__compartment.state.as_str() {
                "Active" => self._state_Active(__ev),
                _ => {}
            }
        }

        fn __transition(&mut self, next_compartment: SelfCallCompartment) {
            self.__next_compartment = Some(next_compartment);
        }

        pub fn kick(&mut self) {
            let __e = std::rc::Rc::new(SelfCallFrameEvent::Kick {});
            let mut __ctx = SelfCallFrameContext::new(std::rc::Rc::clone(&__e), None);
            self._context_stack.push(__ctx);
            self.__kernel(&__e);
            self._context_stack.pop();
        }

        pub fn report(&mut self) -> i32 {
            let __e = std::rc::Rc::new(SelfCallFrameEvent::Report {});
            let mut __ctx = SelfCallFrameContext::new(std::rc::Rc::clone(&__e), None);
            self._context_stack.push(__ctx);
            self.__kernel(&__e);
            let __ctx = self._context_stack.pop().expect("invariant: handler must have pushed a context before reading return");
            match __ctx._return {
                Some(SelfCallFrameReturn::Report(v)) => v,
                Some(SelfCallFrameReturn::_Lifecycle(v)) => v.downcast_ref::<i32>().cloned().unwrap_or_default(),
                _ => Default::default(),
            }
        }

        fn _state_Active(&mut self, __e: &SelfCallFrameEvent) {
            match __e {
                SelfCallFrameEvent::Kick { .. } => { self._s_Active_hdl_user_kick(__e); }
                SelfCallFrameEvent::Report { .. } => { self._s_Active_hdl_user_report(__e); }
                _ => {}
            }
        }

        fn _s_Active_hdl_user_kick(&mut self, __e: &SelfCallFrameEvent) {
            self.count = self.count + 1
            self.report();
            if self._context_stack.last().map_or(false, |ctx| ctx._transitioned) { return; }
        }

        fn _s_Active_hdl_user_report(&mut self, __e: &SelfCallFrameEvent) {
            let __return_val = SelfCallFrameReturn::Report(self.count);
             if let Some(ctx) = self._context_stack.last_mut() { ctx._return = Some(__return_val); }
        }
    }
}
pub use _self_call_framec::*;
